explore chat history db save load

--- a/expl_kani.ipynb
+++ b/expl_kani.ipynb
@@ -5,7 +5,36 @@
    "execution_count": 3,
    "id": "e74580b0-f901-4726-aa38-b35eea9f213e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "USER:  hi\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AI: Hello! How can I assist you today?\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "USER:  alright\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AI: Great! What would you like to talk about or ask?\n"
+     ]
+    }
+   ],
    "source": [
     "from kani import Kani, chat_in_terminal\n",
     "from kani.engines.openai import OpenAIEngine\n",
@@ -18,22 +47,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
+   "id": "8cc8996c-7aa0-4b1a-b715-442270d0b471",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "saved_object = ai.save(\"temp_123.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e8f68fd0-f342-4a17-9f5e-0e87697878b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "("
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "b83aae22-081c-436b-b6a0-6be00f747b68",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[ChatMessage(role=<ChatRole.USER: 'user'>, content='hey kani whats up?', name=None, tool_call_id=None, tool_calls=None, is_tool_call_error=None),\n",
-       " ChatMessage(role=<ChatRole.ASSISTANT: 'assistant'>, content=\"Hello! I'm here and ready to help you with anything you need. What's on your mind?\", name=None, tool_call_id=None, tool_calls=[], is_tool_call_error=None),\n",
-       " ChatMessage(role=<ChatRole.USER: 'user'>, content='coding', name=None, tool_call_id=None, tool_calls=None, is_tool_call_error=None),\n",
-       " ChatMessage(role=<ChatRole.ASSISTANT: 'assistant'>, content=\"Great! What specifically about coding would you like to discuss? Do you have a particular language, project, or problem you're working on?\", name=None, tool_call_id=None, tool_calls=[], is_tool_call_error=None),\n",
-       " ChatMessage(role=<ChatRole.USER: 'user'>, content='create a chat app minimal backend, generic layer by layer', name=None, tool_call_id=None, tool_calls=None, is_tool_call_error=None),\n",
-       " ChatMessage(role=<ChatRole.ASSISTANT: 'assistant'>, content='Creating a minimal chat app backend involves setting up a few key components. Below is a generic structure layer by layer, which you can adapt based on the technology stack you prefer. For this example, I’ll outline how to design a simple chat app using Node.js with Express and WebSocket for real-time communication.\\n\\n### Project Structure\\n\\n```\\n/chat-app\\n├── /src\\n│   ├── /config\\n│   │   └── config.js\\n│   ├── /controllers\\n│   │   └── chatController.js\\n│   ├── /models\\n│   │   └── chatModel.js\\n│   ├── /routes\\n│   │   └── chatRoutes.js\\n│   ├── /services\\n│   │   └── chatService.js\\n│   ├── server.js\\n└── package.json\\n```\\n\\n### Step-by-Step Implementation\\n\\n1. **Initialize the Project**:\\n   ```bash\\n   mkdir chat-app\\n   cd chat-app\\n   npm init -y\\n   npm install express ws\\n   ```\\n\\n2. **Create Configuration File (`config.js`)**:\\n   ```javascript\\n   // src/config/config.js\\n   module.exports = {\\n     PORT: process.env.PORT || 3000,\\n   };\\n   ```\\n\\n3. **Define the Chat Model**:\\n   ```javascript\\n   // src/models/chatModel.js\\n   let messages = [];\\n\\n   const addMessage = (message) => {\\n     messages.push(message);\\n   };\\n\\n   const getMessages = () => {\\n     return messages;\\n   };\\n\\n   module.exports = {\\n     addMessage,\\n     getMessages,\\n   };\\n   ```\\n\\n4. **Create Chat Service (`chatService.js`)**:\\n   ```javascript\\n   // src/services/chatService.js\\n   const { addMessage, getMessages } = require(\\'../models/chatModel\\');\\n\\n   const sendMessage = (message) => {\\n     addMessage(message);\\n     return getMessages();\\n   };\\n\\n   module.exports = {\\n     sendMessage,\\n   };\\n   ```\\n\\n5. **Create Chat Controller (`chatController.js`)**:\\n   ```javascript\\n   // src/controllers/chatController.js\\n   const { sendMessage } = require(\\'../services/chatService\\');\\n\\n   const handleMessage = (ws, message) => {\\n     const updatedMessages = sendMessage(message);\\n     ws.send(JSON.stringify(updatedMessages));\\n   };\\n\\n   module.exports = {\\n     handleMessage,\\n   };\\n   ```\\n\\n6. **Setup Routes (`chatRoutes.js`)**:\\n   ```javascript\\n   // src/routes/chatRoutes.js\\n   const express = require(\\'express\\');\\n   const router = express.Router();\\n\\n   // No RESTful routes in this example. We\\'ll use WebSocket for real-time communication.\\n   // You could add REST routes here if you want to save or retrieve messages via HTTP.\\n   module.exports = router;\\n   ```\\n\\n7. **Create the WebSocket Server (`server.js`)**:\\n   ```javascript\\n   // src/server.js\\n   const express = require(\\'express\\');\\n   const WebSocket = require(\\'ws\\');\\n   const { PORT } = require(\\'./config/config\\');\\n   const { handleMessage } = require(\\'./controllers/chatController\\');\\n\\n   const app = express();\\n   const server = require(\\'http\\').createServer(app);\\n   const wss = new WebSocket.Server({ server });\\n\\n   wss.on(\\'connection\\', (ws) => {\\n     console.log(\\'New client connected\\');\\n\\n     ws.on(\\'message\\', (message) => {\\n       console.log(\\'received:\\', message);\\n       handleMessage(ws, message);\\n     });\\n\\n     ws.on(\\'close\\', () => {\\n       console.log(\\'Client disconnected\\');\\n     });\\n   });\\n\\n   server.listen(PORT, () => {\\n     console.log(`Server is running on http://localhost:${PORT}`);\\n   });\\n   ```\\n\\n8. **Run the Application**:\\n   ```bash\\n   node src/server.js\\n   ```\\n\\n### Client-Side (HTML/JavaScript)\\n\\nHere’s a minimal client-side implementation to connect to your WebSocket server:\\n\\n```html\\n<!DOCTYPE html>\\n<html lang=\"en\">\\n<head>\\n    <meta charset=\"UTF-8\">\\n    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\\n    <title>Chat App</title>\\n</head>\\n<body>\\n    <h1>Chat App</h1>\\n    <div id=\"messages\"></div>\\n    <input id=\"input\" type=\"text\" placeholder=\"Type a message\"/>\\n    <button id=\"send\">Send</button>\\n\\n    <script>\\n        const ws = new WebSocket(\\'ws://localhost:3000\\');\\n\\n        ws.onmessage = function(event) {\\n            const messagesDiv = document.getElementById(\\'messages\\');\\n            messagesDiv.innerHTML = event.data.split(\\',\\').map(msg => `<p>${msg}</p>`).join(\\'\\');\\n        };\\n\\n        document.getElementById(\\'send\\').addEventListener(\\'click\\', () => {\\n            const input = document.getElementById(\\'input\\');\\n            ws.send(input.value);\\n            input.value = \\'\\';\\n        });\\n    </script>\\n</body>\\n</html>\\n```\\n\\n### Summary\\n\\nThis setup describes a minimal backend for a chat app using Node.js, Express, and WebSocket. The architecture includes layers for configuration, models, services, controllers, and routing. You can expand it further by adding additional features like user authentication, message persistence with a database, and more sophisticated message handling logic.', name=None, tool_call_id=None, tool_calls=[], is_tool_call_error=None)]"
+       "[ChatMessage(role=<ChatRole.USER: 'user'>, content='hi', name=None, tool_call_id=None, tool_calls=None, is_tool_call_error=None),\n",
+       " ChatMessage(role=<ChatRole.ASSISTANT: 'assistant'>, content='Hello! How can I assist you today?', name=None, tool_call_id=None, tool_calls=[], is_tool_call_error=None),\n",
+       " ChatMessage(role=<ChatRole.USER: 'user'>, content='alright', name=None, tool_call_id=None, tool_calls=None, is_tool_call_error=None),\n",
+       " ChatMessage(role=<ChatRole.ASSISTANT: 'assistant'>, content='Great! What would you like to talk about or ask?', name=None, tool_call_id=None, tool_calls=[], is_tool_call_error=None)]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,8 +305,321 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b09eae48-ec07-430d-aa89-bf3ce1e23482",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "instructions = \"assistatnt 2\"\n",
+    "engine = OpenAIEngine(api_key, model=\"gpt-4o-mini\")\n",
+    "assistant = Kani(engine, system_prompt=instructions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "24a2f974-8a9b-4b4c-b88f-2233abca2de9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "assistant.chat_history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "706eabec-d9da-4b36-9973-198869c5799f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChatMessage(role=<ChatRole.ASSISTANT: 'assistant'>, content='Hello! How can I assist you today?', name=None, tool_call_id=None, tool_calls=None, is_tool_call_error=None)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "await assistant.chat_round(\"hi\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "3714f10a-7072-4c22-b5bb-e998cea9b2cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ChatMessage(role=<ChatRole.USER: 'user'>, content='hi', name=None, tool_call_id=None, tool_calls=None, is_tool_call_error=None),\n",
+       " ChatMessage(role=<ChatRole.ASSISTANT: 'assistant'>, content='Hello! How can I assist you today?', name=None, tool_call_id=None, tool_calls=None, is_tool_call_error=None)]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "assistant.chat_history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c6b8ce68-7460-4db9-8f2e-7b74e82c0426",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save = assistant.chat_history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "101e124f-2ce8-4916-a49b-ff170a0b3b52",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ChatMessage(role=<ChatRole.USER: 'user'>, content='hi', name=None, tool_call_id=None, tool_calls=None, is_tool_call_error=None),\n",
+       " ChatMessage(role=<ChatRole.ASSISTANT: 'assistant'>, content='Hello! How can I assist you today?', name=None, tool_call_id=None, tool_calls=None, is_tool_call_error=None)]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "save"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "76718dff-9034-4ca3-8c39-ed377615e147",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "instructions = \"assistatnt 2\"\n",
+    "engine = OpenAIEngine(api_key, model=\"gpt-4o-mini\")\n",
+    "assistant = Kani(engine, system_prompt=instructions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "56992954-6f98-4bdf-9cd3-ab0139493e3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "assistant.chat_history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "0ebdbc7c-a3e8-478c-88ab-340585e84d6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assistant.chat_history = save"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "fcc69a97-0a68-4b1f-b7c1-8cdcf00d46c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ChatMessage(role=<ChatRole.USER: 'user'>, content='hi', name=None, tool_call_id=None, tool_calls=None, is_tool_call_error=None),\n",
+       " ChatMessage(role=<ChatRole.ASSISTANT: 'assistant'>, content='Hello! How can I assist you today?', name=None, tool_call_id=None, tool_calls=None, is_tool_call_error=None)]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "assistant.chat_history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "240410aa-572a-4ed6-94b7-69b1bbae13ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChatMessage(role=<ChatRole.ASSISTANT: 'assistant'>, content='It seems like we might have had a previous conversation, but I don’t have the context from it. Could you please remind me what we were discussing or what you need help with?', name=None, tool_call_id=None, tool_calls=None, is_tool_call_error=None)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "await assistant.chat_round(\"where were we\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "486a522e-66ae-48a7-a4a7-7111feabc861",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ChatMessage(role=<ChatRole.USER: 'user'>, content='hi', name=None, tool_call_id=None, tool_calls=None, is_tool_call_error=None),\n",
+       " ChatMessage(role=<ChatRole.ASSISTANT: 'assistant'>, content='Hello! How can I assist you today?', name=None, tool_call_id=None, tool_calls=None, is_tool_call_error=None),\n",
+       " ChatMessage(role=<ChatRole.USER: 'user'>, content='where were we', name=None, tool_call_id=None, tool_calls=None, is_tool_call_error=None),\n",
+       " ChatMessage(role=<ChatRole.ASSISTANT: 'assistant'>, content='It seems like we might have had a previous conversation, but I don’t have the context from it. Could you please remind me what we were discussing or what you need help with?', name=None, tool_call_id=None, tool_calls=None, is_tool_call_error=None)]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "assistant.chat_history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "1a455ac6-608e-45a6-b42e-ad09dd70e15b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChatMessage(role=<ChatRole.ASSISTANT: 'assistant'>, content='Great! What specific aspects of airplanes would you like to discuss? Are you interested in their design, how they work, different types, historical developments, or something else?', name=None, tool_call_id=None, tool_calls=None, is_tool_call_error=None)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "await assistant.chat_round(\"airplanes\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "de54a884-7ccb-40bc-9c4c-e4bb429fc9ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save = assistant.chat_history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "7e6c6335-71cf-4205-8fed-6b57622e4e50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "instructions = \"assistatnt 2\"\n",
+    "engine = OpenAIEngine(api_key, model=\"gpt-4o-mini\")\n",
+    "assistant = Kani(engine, system_prompt=instructions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "adf7b6e2-992b-4e44-b13f-636278e806ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "assistant.chat_history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "85a39f4a-11fe-4f00-ad16-533d5666862b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assistant.chat_history = save"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "f3f99be8-7ee5-4114-b74c-e9cb65a917dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChatMessage(role=<ChatRole.ASSISTANT: 'assistant'>, content='There are many interesting topics related to airplanes! Here are a few suggestions:\\n\\n1. **Aerodynamics**: How the shape of an airplane affects its ability to fly.\\n2. **Aircraft Types**: Differences between commercial, military, and private aircraft.\\n3. **Engineering and Design**: The technology and materials used in modern aircraft, including advancements like composite materials.\\n4. **Flight Mechanics**: Understanding lift, drag, thrust, and weight, and how they interact during flight.\\n5. **History of Aviation**: Key milestones in aviation history, such as the Wright Brothers, jet engines, and space travel.\\n6. **Air Traffic Control**: How air traffic management works and the systems in place to ensure safe flights.\\n7. **Safety and Regulations**: The measures taken to ensure air travel safety and the regulations governing the aviation industry.\\n8. **Environmental Impact**: The impact of aviation on the environment and ongoing efforts to create more sustainable aircraft.\\n9. **Future of Aviation**: Innovations in aviation technology, such as electric planes and autonomous flying systems.\\n\\nLet me know if any of these catch your interest or if there’s another specific topic you have in mind!', name=None, tool_call_id=None, tool_calls=None, is_tool_call_error=None)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "await assistant.chat_round(\"what else?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40897a1f-1411-46af-94dd-97d7d3e14c77",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -281,7 +641,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
