build: database layer

--- a/expl_kani.ipynb
+++ b/expl_kani.ipynb
@@ -618,12 +618,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "40897a1f-1411-46af-94dd-97d7d3e14c77",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "USER:  hi\n"
@@ -637,7 +637,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "USER:  alirght\n"
@@ -655,7 +655,7 @@
     "from kani import Kani, chat_in_terminal\n",
     "from kani.engines.openai import OpenAIEngine\n",
     "\n",
-    "api_key = \"sk-svcacct-1IPVWhZrGhpKqv9OsyFNej3covM8DXXGnZDjKLAsD4Im_0xdFzQV3OSfrb26Mr1XGqRT3BlbkFJbxy4LMliwWxWlA2dwBz3vXpLm0Heg7immHGySQJwr4MTHj4WOWnZ4elAl2kkepGJOwAA\"\n",
+    "api_key = \"\"\n",
     "engine = OpenAIEngine(api_key, model=\"gpt-4o-mini\")\n",
     "ai = Kani(engine)\n",
     "chat_in_terminal(ai)"
@@ -809,12 +809,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "6b7fbe01-1873-4d01-a917-9f2af05618ef",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "USER:  hi, my name is max\n"
@@ -828,7 +828,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "USER:  I like everything and nothing\n"
@@ -842,7 +842,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "USER:  football\n"
@@ -860,7 +860,7 @@
     "from kani import Kani, chat_in_terminal\n",
     "from kani.engines.openai import OpenAIEngine\n",
     "\n",
-    "api_key = \"sk-svcacct-1IPVWhZrGhpKqv9OsyFNej3covM8DXXGnZDjKLAsD4Im_0xdFzQV3OSfrb26Mr1XGqRT3BlbkFJbxy4LMliwWxWlA2dwBz3vXpLm0Heg7immHGySQJwr4MTHj4WOWnZ4elAl2kkepGJOwAA\"\n",
+    "api_key = \"\"\n",
     "engine = OpenAIEngine(api_key, model=\"gpt-4o-mini\")\n",
     "ai = Kani(engine)\n",
     "chat_in_terminal(ai)"
@@ -1006,12 +1006,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "3dce3642-8a34-4012-ae58-41100e5a33b9",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "USER:  what is my name\n"
@@ -1025,7 +1025,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "USER:  what were we taking about\n"
@@ -1047,8 +1047,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "1d8557dd-879c-4ed9-b783-1ad430863ca5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChatMessage(role=<ChatRole.ASSISTANT: 'assistant'>, content='Got it! American football is a fascinating sport with a rich history. Are you a fan of a particular team or player? Or would you like to discuss rules, strategies, or something else related to American football?', name=None, tool_call_id=None, tool_calls=None, is_tool_call_error=None)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "await ai.chat_round('okay american football')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "c15f8e1e-0c14-4b4c-84f8-0b838f3bc443",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ChatMessage(role=<ChatRole.USER: 'user'>, content='hi, my name is max', name=None, tool_call_id=None, tool_calls=None, is_tool_call_error=None),\n",
+       " ChatMessage(role=<ChatRole.ASSISTANT: 'assistant'>, content='Hi Max! How can I assist you today?', name=None, tool_call_id=None, tool_calls=[], is_tool_call_error=None),\n",
+       " ChatMessage(role=<ChatRole.USER: 'user'>, content='I like everything and nothing', name=None, tool_call_id=None, tool_calls=None, is_tool_call_error=None),\n",
+       " ChatMessage(role=<ChatRole.ASSISTANT: 'assistant'>, content=\"That sounds like a unique perspective! It can be interesting to have a wide-ranging appreciation for many things while also feeling indifferent towards others. Is there a particular topic or area you're interested in discussing?\", name=None, tool_call_id=None, tool_calls=[], is_tool_call_error=None),\n",
+       " ChatMessage(role=<ChatRole.USER: 'user'>, content='football', name=None, tool_call_id=None, tool_calls=None, is_tool_call_error=None),\n",
+       " ChatMessage(role=<ChatRole.ASSISTANT: 'assistant'>, content='Great! Football is an exciting sport with a passionate following. Are you a fan of a specific team or league? Or is there a particular aspect of football you enjoy, like the strategies, players, or major events like the World Cup?', name=None, tool_call_id=None, tool_calls=[], is_tool_call_error=None),\n",
+       " ChatMessage(role=<ChatRole.USER: 'user'>, content='what is my name', name=None, tool_call_id=None, tool_calls=None, is_tool_call_error=None),\n",
+       " ChatMessage(role=<ChatRole.ASSISTANT: 'assistant'>, content='Your name is Max! How can I help you today, Max?', name=None, tool_call_id=None, tool_calls=[], is_tool_call_error=None),\n",
+       " ChatMessage(role=<ChatRole.USER: 'user'>, content='what were we taking about', name=None, tool_call_id=None, tool_calls=None, is_tool_call_error=None),\n",
+       " ChatMessage(role=<ChatRole.ASSISTANT: 'assistant'>, content=\"We were talking about football! You mentioned you like everything and nothing, and then brought up football as a topic of interest. Is there something specific about football you'd like to dive into?\", name=None, tool_call_id=None, tool_calls=[], is_tool_call_error=None),\n",
+       " ChatMessage(role=<ChatRole.USER: 'user'>, content='okay american football', name=None, tool_call_id=None, tool_calls=None, is_tool_call_error=None),\n",
+       " ChatMessage(role=<ChatRole.ASSISTANT: 'assistant'>, content='Got it! American football is a fascinating sport with a rich history. Are you a fan of a particular team or player? Or would you like to discuss rules, strategies, or something else related to American football?', name=None, tool_call_id=None, tool_calls=None, is_tool_call_error=None)]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ai.chat_history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c59fc25e-c6d1-40a1-addf-f95bb11a6423",
    "metadata": {},
    "outputs": [],
    "source": []
